# fuchico

./: .gitignore  README.md  biome.json  flake.nix  index.html  package.json  package.nix  pnpm-lock.yaml  vite.config.ts
demo-notes/: Desenho.excalidraw  editor-features.md  outro.excalidraw  personal.md  project-launch.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mermaid-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/caldav/: client.rs  commands.rs  config.rs  ical.rs  matcher.rs  mod.rs  sidecar.rs  sync.rs
src-tauri/src/modules/fonts/: mod.rs
src-tauri/src/modules/fs/: file.rs  mod.rs  mutate.rs  tree.rs
src-tauri/src/modules/search/: mod.rs
src-tauri/src/modules/tasks/: mod.rs
src/lib/: usePrefersDark.ts
src/modules/agenda/: AgendaView.tsx
src/modules/agenda/lib/: useAgenda.ts
src/modules/editor/: EditorPane.tsx  OutlineOverlay.tsx  index.ts
src/modules/editor/lib/: codeBlockStyle.ts  helix.ts  (+12 more)
src/modules/excalidraw/: ExcalidrawPane.tsx  index.ts
src/modules/explorer/: FileExplorer.tsx  TreeRow.tsx
src/modules/mermaid/: MermaidDiagramView.tsx  MermaidPane.tsx  MermaidWindowApp.tsx  index.ts
src/modules/search/: SearchPanel.tsx  index.ts
src/modules/settings/: AccountForm.tsx  FolderLinkTable.tsx  FoldingSection.tsx  FontSection.tsx  KeybindingSection.tsx  SettingsView.tsx  ShortcutsSection.tsx  ThemeSection.tsx  index.ts
src/modules/tabs/: TabBar.tsx  index.ts
src/styles/: globals.css
(+13 files in other folders)
