[package]
name = "fuchico"
version = "0.1.0"
description = "A standalone code editor with correct Helix keybindings"
authors = ["fuleco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fuchico_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
log = "0.4"
regex = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2"] }
quick-xml = "0.41.0"
icalendar = "0.17.12"
uuid = { version = "1.24.0", features = ["v4"] }
sha2 = "0.11.0"
chrono = { version = "0.4.45", features = ["serde"] }
tokio = { version = "1.53.0", features = ["time", "rt", "macros"] }
font-kit = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
keyring-core = "1.0.0"
linux-keyutils-keyring-store = "1.0.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = "4.1.5"

[dev-dependencies]
wiremock = "0.6.5"

